Versjon 2.4.0 Feature: Opprettet nyttPassord extension